# crawler-leilao-detran

./: .gitignore  README.md  RUNNING.md  codigofonte.html  data_analysis.py  pyproject.toml  requirements.txt  test_selector.py
configs/: filters.example.yaml
src/detran_leilao_crawler/: __init__.py  api_json.py  checkpoint.py  cli.py  config.py  crawler.py  filters.py  logging_utils.py  models.py  parsers.py  rate_limit.py  retry.py  robots.py  serde.py  storage.py
src/detran_leilao_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_checkpoint.py  test_filters.py  test_issue_lot_collision.py  test_parsers_lots.py  test_robots.py
